- switch timers are now also visible in all search results EPG menus
- Avoid repeats: in 'compare summary' one can now adjust the required match, default is 90%.
- if there is no subtitle the filename now defaults to YYYY.MM.DD-HH.MM-Weekday to ease 
  sorting in some frontends, thanks to Dominic Evans for providing a patch

fixes:
- fixed a crash when pressing 'Ok' in an empty timers done menu
- fixed a crash when using the progressbar and events with 0 duration exist, thanks 
  to egal@vdrportal
- when an incomplete recording triggers a search timer update for a search timer 
  with 'avoid repeats' now running events are ignored for the repeats.
- now using cCondWait::Wait instead of cCondWait:SleepMs to avoid shutdown problems,
  thanks to e9hack@vdrportal for providing a patch
- fixed line breaks in SVDRP command LSTT, thanks to Andreas Mair for providing a 
  patch
- improved response time when canceling the search timer thread
- fixed a segfault occurring when navigating to a userdefined epg menu that has expired
  in the meantime, thanks to Mike Constabel for reporting
- the day selection menu in the timer edit menu was hidden
- if an event was matched by multiple search timers with 'announce only' setting, it was
  also listed more than once. Thanks to Andreas Mair for reporting.
- fixed a bug in search timer announcements concerning the display of the corresponding
  search timer
- fixed some memory leaks, thanks to Bittor Corl for providing a patch
- some fixes to compile with gcc-4.4, thanks to firefly@vdrportal for providing a patch
- fixed wrong man section of some man pages, thanks to Ville Skyttä for providing a patch
- some fixes regarding libtre includes, thanks to Ville Skyttä for providing a patch
- fix UTF8-character handling in timer file names, thanks to Rolf Ahrenberg for providing
  a patch
- fixed a crash when adding huge episode names to the timer's file name, thanks to Lari 
  Tuononen for reporting