@@ -99,6 +99,7 @@ new:
 - Avoid repeats: in 'compare summary' one can now adjust the required match, default is 90%.
 - if there is no subtitle the filename now defaults to YYYY.MM.DD-HH.MM-Weekday to ease 
   sorting in some frontends, thanks to Dominic Evans for providing a patch
+- should now compile in FreeBSD, thanks to Juergen Lock for providing a patch
 
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
